Changes for assignment 4
